--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">LYGreen</a>.
+      Coded by <a href="https://github.com/LYGreen">LYGreen</a>.
     </div>
   </footer>
 </body>
