--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       }
     }
 
+    ul, li {
+      margin: 0;
+      padding: 0;
+    }
+
     a {
       text-decoration: none;
       color: black;
@@ -88,25 +93,34 @@
     }
 
     .social-list {
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
       width: 100%;
-    }
 
-    .social-list a {
-      color: white;
-      text-align: center;
-      padding: 16px 0;
-      background-color: hsl(0, 0%, 20%);
-      font-weight: 700;
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
 
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
+        li {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+        }
 
-    .social-list a:hover {
-      background-color: hsl(75, 94%, 57%);
-      color: hsl(0, 0%, 20%);
+        a {
+          color: white;
+          text-align: center;
+          padding: 16px 0;
+          background-color: hsl(0, 0%, 20%);
+          font-weight: 700;
+
+          transition: background-color 0.3s ease, color 0.3s ease;
+
+          &:hover {
+            background-color: hsl(75, 94%, 57%);
+            color: hsl(0, 0%, 20%);
+          }
+        }
+      }
     }
 
     .attribution {
@@ -138,13 +152,15 @@
         <div class="description">"Front-end developer and avid reader."</div>
       </main>
 
-      <div class="social-list">
-        <a href="#" class="round">GitHub</a>
-        <a href="#" class="round">Frontend Mentor</a>
-        <a href="#" class="round">LinkedIn</a>
-        <a href="#" class="round">Twitter</a>
-        <a href="#" class="round">Instagram</a>
-      </div>
+      <nav class="social-list">
+        <ul>
+          <li><a href="#" class="round">GitHub</a></li>
+          <li><a href="#" class="round">Frontend Mentor</a></li>
+          <li><a href="#" class="round">LinkedIn</a></li>
+          <li><a href="#" class="round">Twitter</a></li>
+          <li><a href="#" class="round">Instagram</a></li>
+        </ul>
+      </nav>
     </div>
   </div>
 
